<resources>
    <string name="app_name">MainProject</string>
    <string name="ed_log"><font size="15">Введите логин</font></string>
    <string name="ed_pas"><font size="15">Введите пароль</font></string>
    <string name="ed_email"><font size="13">Введите адрес электронной почты</font></string>
    <string name="ed_tel"><font size="13">Введите номер телефона</font></string>
    <string name="ed_age"><font size="15">Введите возраст</font></string>
    <string name="ed_date_of_birth"><font size="15">Введите дату рождения</font></string>
    <string name="ed_city"><font size="15">Введите город проживания</font></string>
    <string name="ed_pas1"><font size="15">Введите пароль</font></string>
    <string name="ed_pas2"><font size="15">Повторно введите пароль</font></string>
    <string-array name="filters">
        <item>По городу</item>
        <item>По типу</item>
        <item>По новизне</item>
        <item>по близости</item>
    </string-array>
    <string-array name="fullInfo">
        <item>Подробнее</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_heading">Список</string>

</resources>