<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/white1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:textStyle="bold"
            android:textSize="30dp"
            android:text="Регистрация"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:textSize="15dp"
            android:text="Логин"/>
        <EditText
            android:id="@+id/ed_reg_name"
            android:textColor="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:background="@drawable/for_ed_text"
            android:textColorHint="@color/for_hint"
            android:hint="@string/ed_log" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_reg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/dark_circle_button"
                android:text="   Электронный адрес   "
                android:textSize="10dp"
                android:textColor="@color/white"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_reg_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/light_circle_button"
                android:text="  Номер телефона   "
                android:textSize="10dp"
                android:textColor="@color/purple_700"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_reg_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            android:text="Адрес электронной почты"/>
        <EditText
            android:id="@+id/ed_reg_data"
            android:textColor="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:background="@drawable/for_ed_text"
            android:textColorHint="@color/for_hint"
            android:hint="@string/ed_email" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:text="Возраст"/>
        <EditText
            android:id="@+id/ed_reg_age"
            android:inputType="date"
            android:textColor="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:background="@drawable/for_ed_text"
            android:textColorHint="@color/for_hint"
            android:hint="@string/ed_age" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:text="Дата рождения"/>
        <EditText
            android:id="@+id/ed_reg_dateOfBirth"
            android:inputType="number"
            android:digits="0123456789."
            android:textColor="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:background="@drawable/for_ed_text"
            android:textColorHint="@color/for_hint"
            android:hint="@string/ed_date_of_birth" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:text="Город"/>
        <EditText
            android:id="@+id/ed_reg_city"
            android:textColor="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:background="@drawable/for_ed_text"
            android:textColorHint="@color/for_hint"
            android:hint="@string/ed_city" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:text="Пароль"/>
        <EditText
            android:id="@+id/ed_reg_pass1"
            android:textColor="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:background="@drawable/for_ed_text"
            android:textColorHint="@color/for_hint"
            android:hint="@string/ed_pas1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:text="Подтверждение пароля"/>
        <EditText
            android:id="@+id/ed_reg_pass2"
            android:textColor="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:background="@drawable/for_ed_text"
            android:textColorHint="@color/for_hint"
        android:hint="@string/ed_pas2"/>

        <TextView
            android:id="@+id/checking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=" "
            android:layout_margin="20dp"
            android:textColor="@color/red" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_reg_fr_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="70dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/dark_circle_button"
            android:text="  зарегестрироваться  "
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
    </ScrollView>
</FrameLayout>